  - [May 7, 99] Fixed bug: recovering data base from old version of GeneWeb
    did not work when the old directory held spaces.
  - [May 7, 99] Fixed bad behavior under Windows: "GWU.EXE" (in uppercase)
    was not regognized when searching for old GeneWeb versions.
  - [May 7, 99] Fixed bug: "cleanup" under Windows did not work.

* GeneWeb Daemon/CGI (gwd)
  - [May 17, 99] Added, in ancestors displaying, the ability to cancel GeneWeb
    links. Useful to extract a Web page for a site without GeneWeb server.
  - [May 16, 99] Fixed bug: in ascendants long displaying, did not display
    the last possible generation.
  - [May 15, 99] Added a "?" at end of empty requests (with just the data base
    name) because of too smart browsers which automatically add a "/" at end
    of the address in this case (transforming e.g. "http://host/base" into
    "http://host/base/"), what makes the request not working.
  - [May 14, 99] Fixed bug: in personal pages, the term "died" was sometimes
    missing when there was only a death place but no death date. Happened
    for persons born more than 120 years ago.
  - [May 12, 99] Fixed problem in CGI mode under Windows: sometimes displayed
    warning texts on the page.
  - [May 11, 99] Fixed bug: advanced search worked bad when neither "wizard"
    nor "friend": did not work when only specifying e.g. a first name
    or a surname of an existing (non "public") person.
  - [May 11, 99] Fixed bug: when adding ";opt=no_index" in URLs like explained
    in the doc ("How to put links to your base"), the used language was
    missing in the new URL.
  - [May 10, 99] Added ability to put relationship date for non married
    persons.
  - [May 7, 99] Fixed bug visible in Danish: the AE ligature ("&aelig;")
    was incorrectly capitalized.

* Documentation
  - [May 13, 99] Updated Swedish documentation (Lars Gustavsson).

GeneWeb Version 2.02
--------------------

* New feature
